[gd_scene load_steps=4 format=3 uid="uid://b7xexample123"]

[ext_resource type="Script" path="res://scenes/test/dps_benchmark/dummy_target.gd" id="1_dummy"]
[ext_resource type="PackedScene" uid="uid://dvho7o7f7skqi" path="res://scenes/component/health_component.tscn" id="2_health"]
[ext_resource type="PackedScene" uid="uid://dbf1mn3s1wi5q" path="res://scenes/component/hurt_box_component.tscn" id="3_hurtbox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[node name="DummyTarget" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_dummy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
modulate = Color(1, 0.5, 0.5, 1)
texture = preload("res://icon.png")
scale = Vector2(0.25, 0.25)

[node name="HealthComponent" parent="." instance=ExtResource("2_health")]
max_health = 1000.0

[node name="HurtBoxComponent" parent="." instance=ExtResource("3_hurtbox")]
collision_layer = 0
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="HurtBoxCollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("RectangleShape2D_1")